Added a Update System, changed the README.md file, and fixed the package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "guildbot",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "This bot was Developed for the Purpose of having a Discord Bot Framework Standard for Developers to develop off of for Guilds.",
   "keywords": [
     "OpenShift",
@@ -15,7 +15,7 @@
   "author": {
     "name": "Bioblaze Payne",
     "email": "BioblazePayne@gmail.com",
-    "url": "https://twitter.com/BioblazePayne"
+    "url": "https://www.linkedin.com/in/bioblazepayne"
   },
   "repository": {
     "type": "git",
@@ -32,7 +32,11 @@
   },
   "dependencies": {
     "discord.io": "^2.4.2",
-    "require-all": "^2.1.0"
+    "jsonfile": "^2.4.0",
+    "mongoose": "^4.8.0",
+    "require-all": "^2.1.0",
+    "semver": "^5.3.0",
+    "string-format": "^0.5.0"
   },
   "devDependencies": {},
   "bundleDependencies": [],
